# CWB_Project

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 85061c5fc92e_initial_schema.py
docs/: architecture.md  design-ideas.md  design-review.html  palette-preview.html  pitch_script.md
docs/reference/: problem-statement.md
docs/superpowers/plans/: 2026-05-01-sj-project-planner-agent-implementation.md
docs/superpowers/specs/: 2026-05-01-sj-project-planner-agent-design.md
infra/: deploy.ps1  deploy.sh
src/planner/: __init__.py  config.py  db.py  matcher.py  models.py  service.py  webhook.py
src/planner/agent/: __init__.py  client.py  planner_agent.py  prompts.py  schemas.py  tools.py
src/planner/repositories/: __init__.py  change_log_repo.py  drafts_repo.py  meeting_notes_repo.py  tasks_repo.py
src/planner/ui/: app.py  sample_data.py  styles.py
src/planner/ui/_pages/: change_log.py  drafts.py  gantt.py  inbox.py  replay.py  tracker.py
src/planner/ui/pages/: change_log.py  drafts.py  gantt.py  inbox.py  tracker.py
tests/: conftest.py  test_agent_live.py  test_agent_tools.py  test_matcher.py  test_repositories.py  test_service.py
tests/fixtures/: sample_notes.py
