[project]
name = "sj-planner-agent"
version = "0.1.0"
description = "SJ Project Planner Agent — agentic AI for meeting-to-plan translation"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.36",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rapidfuzz>=3.9",
    "plotly>=5.22",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
]

[tool.pytest.ini_options]
markers = [
    "live: integration tests that hit real Azure OpenAI (slow, costs money)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
